fixed white background being visible

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ html, body {
     margin: 0;
 
     background-color: #f0f0f0;
+
+    overscroll-behavior: none;
+    
     
     }
 
